tests/cases/fail/test_turbofish_unknown_fn.ixc
//@ error: unknown function 'unwrap' — is it defined, and imported into this module?
// A turbofished call to a name that doesn't resolve (undefined, or — as here —
// not imported, since imports aren't re-exported) reports the missing symbol,
// not a misleading "type arguments are only valid on generic calls".

@export
proc main() i32 {
    let p: *i32 = unwrap::<i32>(0);
    return 0;
}
